fixed columns flowing out of container

--- a/styles.CSS
+++ b/styles.CSS
@@ -1,5 +1,5 @@
 *{box-sizing:border-box}
-.container {max-width:600px;margin:0 auto;background-color:#eee9e9;padding:30px;border:4px solid black}
+.container {max-width:600px;margin:0 auto;background-color:#eee9e9;padding:30px;border:4px solid black;overflow:auto;}
 body{background-color:rgb(50, 115, 220);}
-.pop-articles{width:50%;float:right;overflow:auto;padding:10px}
-.books {width:50%;float:left;overflow:auto;padding-bottom: 10px}
+.pop-articles{width:50%;float:right;overflow:auto;padding:1px}
+.books {width:50%;float:left;overflow:auto;margin-bottom:30px}
